--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>Baltyboys Forum</title>
+
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet"> "
+
+  <!--CSS Stylesheets-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+
+  <!--Font Awesome-->
+  <script src="https:use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
 </head>
 
-<body background-color:blue>
+<body>
   <section id="title">
     <div class="container-fluid">
 
@@ -21,25 +30,25 @@
         <div class="collapse navbar-collapse" id="mobileviewnavmenu">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="bootstrap_project_12_2020/index.html"> Home</a>
+              <a class="nav-link" href="bootstrap_project_12_2020/index.html"> <i class="fas fa-home"></i> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Accomodation</a>
+              <a class="nav-link" href=""><i class="fas fa-bed"></i>  Accomodation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Services</a>
+              <a class="nav-link" href=""> <i class="fas fa-wrench"></i> Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Produce</a>
+              <a class="nav-link" href=""> <i class="fas fa-apple-alt"></i> Produce</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Walking Trails</a>
+              <a class="nav-link" href=""> <i class="fas fa-hiking"></i> Walking Trails</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Map</a>
+              <a class="nav-link" href=""> <i class="fas fa-map-signs"></i>Map</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Contact</a>
+              <a class="nav-link" href=""> <i class="far fa-address-book"></i> Contact</a>
             </li>
           </ul>
         </div>
@@ -54,8 +63,8 @@
 
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
+          <button type="button" class="btn btn-info"> <i class="fas fa-map-signs"></i> Map of Baltyboys</button>
+          <button type="button" class="btn btn-outline-info">Download</button>
         </div>
 
         <div class="col-lg-6">
