--- a/map.html
+++ b/map.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -60,22 +60,14 @@
     <div class="container-fluid">
 
 
-
-
-
       <!-- Title -->
 
       <div class="row">
 
         <div class="col-lg-6">
           <h1>Baltyboys Forum</h1>
-          <h2>Our Goal</h2>
-          <h3> We want our home townland of Baltyboys to not only have a beauitful, fuctioning website, that is accessible to everyone, but is also mobile first. So anyone and everyone can acess important information regarding the area's amenities, business,walking
-            trails. etc.</h3>
-          <button type="button" class="btn btn-info btn-lg main-button"> <i class="fas fa-map-signs"></i> Map of Baltyboys</button>
-          <button type="button" class="btn btn-outline-info btn-lg main-button"><i class="far fa-address-book"></i> Contact </button>
-
-
+          <h2>Map of The Baltyboys Area</h2>
+          <h3> The Baltyboys area consists of asdfassdf asdf asdf as df </h3>
         </div>
 
         <div class="col-lg-6">
@@ -88,110 +80,19 @@
 
   </section>
 
-
-  <!-- Features -->
-
-  <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
-  </section>
-
-
-  <!-- Testimonials -->
-
-  <section id="testimonials">
-
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
-  </section>
-
-
-  <!-- Press -->
-
-  <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
-  </section>
-
-
-  <!-- Pricing -->
-
-  <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-  </section>
-
-
   <!-- Call to Action -->
 
   <section id="cta">
     <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
     </h3>
-    <button type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</button>
-
+    <button type="button" href=""><i class="far fa-address-book"></i> Contact</button>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-    <div class="row">
-
-      <div class="col-lg-6">
-        <p> Powered by </p>
-      </div>
-
-      <div class="col-lg-6">
-        <a href="https://www.cleancodecompany.com/">The Clean Code Company </a>
-      </div>
-
-    </div>
-
-
+    <p>Powered by The CLean Code Company</p>
   </footer>
 
 
