Finished Sectoin 6 lecture 79 of Udemy course

--- a/accomodation.html
+++ b/accomodation.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -51,6 +51,9 @@
           <a class="nav-link" href="map.html"> <i class="fas fa-map-signs"></i>Map</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="local_history_fauna_.html"><i class="fas fa-scroll"></i>  Local History & Fauna </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
         </li>
       </ul>
@@ -68,12 +71,18 @@
       <div class="row">
 
         <div class="col-lg-6">
+          <br>
+          <br>
+          <br>
           <h1>Baltyboys Forum</h1>
           <h2>Accomodation</h2>
           <h3> In the Baltyboys area we are lucky to have several bed & breakfasts as well as a hotel</h3>
         </div>
 
         <div class="col-lg-6">
+          <br>
+          <br>
+          <br>
           <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
         </div>
 
@@ -93,38 +102,79 @@
     <div class="row">
 
       <div class="col-lg-6">
+        <br>
+        <br>
         <h1>Bed & breakfasts</h1>
         <br>
-        <h3>BBBBBBBBBBBl</h3>
+        <br>
+        <h3>Baltyboys Lodge B&B</h3>
         <p> Text yext copy text. Wasd wasd asadf asdf asdf asdf asdf asdf adff</p>
         <p> Contact details to be added here.</p>
         <br>
-        <h3>BBBBBBBBBBBl</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h3>Lakeview Lodge B&B</h3>
         <p> Text yext copy text. Wasd wasd asadf asdf asdf asdf asdf asdf adff</p>
         <p> Contact details to be added here.</p>
         <br>
-        <h3>BBBBBBBBBBBl</h3>
-        <p> Text yext copy text. Wasd wasd asadf asdf asdf asdf asdf asdf adff</p>
-        <p> Contact details to be added here.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <h1>Hotels</h1>
         <br>
-        <h3>Tullfarris Hotel & golf Resort</h3>
+        <br>
+        <h3>Tullfarris Hotel & Golf Resort</h3>
         <p> Text yext copy text. Wasd wasd asadf asdf asdf asdf asdf asdf adff</p>
         <p> Contact details to be added here.</p>
+        <br>
         <br>
       </div>
 
       <div class="col-lg-6">
-        <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
-        <br>
-        <br>
-        <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
         <br>
         <br>
         <br>
-        <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_baltyboys_lake_view_.jpg" alt="view of a lake">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_baltyboys_lake_view_.jpg" alt="view of a lake">
+        <br>
+        <br>
+        <br>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_baltyboys_lake_view_.jpg" alt="view of a lake">
         <br>
         <br>
         <br>
@@ -139,10 +189,12 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
-    </h3>
-    <button type="button" href=""><i class="far fa-address-book"></i> Contact</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!</h3>
+    <a type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
 
 
   </section>
@@ -152,7 +204,7 @@
 
   <footer id="footer">
 
-    <p>Powered by The CLean Code Company</p>
+    <p>Powered by The Clean Code Company</p>
 
   </footer>
 
