--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -49,6 +49,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="map.html"> <i class="fas fa-map-signs"></i>Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="local_history_fauna_.html"><i class="fas fa-scroll"></i>  Local History & Fauna </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
@@ -69,10 +72,11 @@
 
         <div class="col-lg-6">
           <h1>Baltyboys Forum</h1>
-          <h2>Contact</h2>
-          <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
-          </h3>
-          <a class="button-contact" href="mailto:sarah@cleancodecompsny.com" class="btn btn-outline-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
+          <br>
+          <h3>Contact</h3>
+          <p>Do you have something you would like added to The Baltyboys Forum?</p>
+          <p>Then Contact Us Today!</p>
+          <a class="button-contact btn btn-outline-info btn-lg main-button" href="mailto:sarah@cleancodecompany.com"><i class="far fa-address-book"></i> Contact</a>
         </div>
 
         <div class="col-lg-6">
