--- a/local_history_fauna_.html
+++ b/local_history_fauna_.html
@@ -63,64 +63,70 @@
     <div class="container-fluid">
 
 
-
-
-
       <!-- Title -->
 
       <div class="row">
 
-        <div class="col-lg-6">
-          <br>
-          <br>
-          <br>
+        <div class="col-lg-4">
           <h1>Baltyboys Forum</h1>
-          <h2>Our Goal</h2>
-          <h3> We want our home townland of Baltyboys to not only have a beauitful, fuctioning website, that is accessible to everyone, but is also mobile first. So anyone and everyone can acess important information regarding the area's amenities, business,
-            walking trails. etc.</h3>
-
-          <a type="button" href="map.html" class="btn btn-info btn-lg main-button"><i class="fas fa-map-signs"></i> Map of Baltyboys</a>
+          <h6> The Baltyboys area has a rich history and has loasds of wild fauna.</h6>
         </div>
 
-        <div class="col-lg-6">
-          <br>
-          <br>
-          <br>
-          <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
+        <div class="col-lg-2">
+          <img src="images/250_resized_baltyboys_lake_view_.jpg" alt="view of a lake">
+        </div>
+        <div class="col-lg-2">
+          <img src="images/250_resized_cow_baltyboys.jpg" alt="local cows">
+        </div>
+        <div class="col-lg-2">
+          <img src="images/250_resized_baltyboys_wild_flowers_.jpg" alt="wild flowers">
+        </div>
+        <div class="col-lg-2">
+          <img src="images/sqd_250_resized_lake_view_baltyboys_near_graveyard.jpg" alt="view of the lake">
         </div>
 
       </div>
+
+    </div>
+
+  </section>
+
+  <!--Local History-->
+  <section>
+    <div class="row">
+
+      <div class="col-lg-12">
+        <h1>Local History</h1>
+        <h6> The Baltyboys area has a rich history and has loasds of wild fauna.</h6>
+      </div>
+    </div>
+  </section>
+
+  <!--Local Fauna-->
+  <section>
+    <div class="row">
+
+      <div class="col-lg-12">
+        <h1>Local Fauna</h1>
+        <h6> The Baltyboys area has a rich history and has loasds of wild fauna.</h6>
+      </div>
+    </div>
 
     </div>
 
   </section>
 
   <!-- Call to Action -->
-
-  <section id="cta">
+  <section>
     <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
     </h3>
     <a type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
-
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
-    <div class="row">
-
-      <div class="col-lg-6">
-        <p> Powered by </p>
-      </div>
-
-      <div class="col-lg-6">
-        <a href="https://www.cleancodecompany.com/">The Clean Code Company </a>
-      </div>
-
-    </div>
-
-
+    <p>Powered by The Clean Code Company</p>
   </footer>
 
 
