--- a/map.html
+++ b/map.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -51,6 +51,9 @@
           <a class="nav-link" href="map.html"> <i class="fas fa-map-signs"></i>Map</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="local_history_fauna_.html"><i class="fas fa-scroll"></i>  Local History & Fauna </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
         </li>
       </ul>
@@ -66,12 +69,12 @@
 
         <div class="col-lg-6">
           <h1>Baltyboys Forum</h1>
-          <h2>Map of The Baltyboys Area</h2>
-          <h3> The Baltyboys area consists of asdfassdf asdf asdf as df </h3>
+          <h2><i class="fas fa-map-signs"></i> Map of The Baltyboys Area</h2>
+          <h6> The Baltyboys area consists of asdfassdf asdf asdf as df </h6>
         </div>
 
         <div class="col-lg-6">
-          <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
+          <img src="images/500_baltyboys_google_map.jpg" alt="view of a lake">
         </div>
 
       </div>
@@ -85,15 +88,13 @@
   <section id="cta">
     <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
     </h3>
-    <button type="button" href=""><i class="far fa-address-book"></i> Contact</button>
-  </section>
+    <a type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
 
+    <!-- Footer -->
 
-  <!-- Footer -->
-
-  <footer id="footer">
-    <p>Powered by The CLean Code Company</p>
-  </footer>
+    <footer id="footer">
+      <p>Powered by The Clean Code Company</p>
+    </footer>
 
 
 </body>
