--- a/walking_trails.html
+++ b/walking_trails.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -51,6 +51,9 @@
           <a class="nav-link" href="map.html"> <i class="fas fa-map-signs"></i>Map</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="local_history_fauna_.html"><i class="fas fa-scroll"></i>  Local History & Fauna </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
         </li>
       </ul>
@@ -68,6 +71,9 @@
       <div class="row">
 
         <div class="col-lg-6">
+          <br>
+          <br>
+          <br>
           <h1>Baltyboys Forum</h1>
           <h2>Walking Trails</h2>
           <h5> In the Baltyboys area we are lucky to have several places where one can view the Blessington Lake, as well as some nice areas to go walking. Eventually there will also be a greenway in this area, (the extenstion of the Blessington greenway coming
@@ -75,6 +81,10 @@
         </div>
 
         <div class="col-lg-6">
+          <br>
+          <br>
+          <br>
+          <br>
           <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
         </div>
 
@@ -106,8 +116,8 @@
         <br>
         <br>
         <br>
-        <h3>BBBBBBBBBBBl</h3>
-        <p> Text yext copy text. Wasd wasd asadf asdf asdf asdf asdf asdf adff</p>
+        <h3>Blessington Lake Viewing Point</h3>
+        <p> Located down a small laneway, this access point to the Lake is beauitful, and depending on the time of year and water levels of the lake, one can walk along the lakeshore here to as far as the Baltyboys Bridge.</p>
         <p> Contact details to be added here.</p>
         <br>
         <br>
@@ -130,17 +140,52 @@
 
       </div>
 
-      <div class="col-lg-6">
-        <img src="images/ed_500_637_resized_zeus_start_of_radio_tower.jpg" alt="view of a lake">
+      <div class="col-lg-3">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_zeus_start_of_radio_tower(1).jpg" alt="view of a lake">
         <h6>What the Radio Tower Trail looks like at the base, featuring Zeus a local long distanace runner</h6>
         <br>
         <br>
-        <img src="images/500_resized_zeus_atop_radio_tower.jpg" alt="view of a lake">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_zeus_atop_radio_tower.jpg" alt="view of a lake">
         <h6>The view from the top of the Radio Tower Trail, featuring Zeus a local long distance runner</h6>
         <br>
         <br>
         <br>
-        <img src="images/resized_500_baltyboys_lake_view_.jpg" alt="view of a lake">
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+
+      <div class="col-lg-3">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_zeus_atop_radio_tower.jpg" alt="view of a lake">
+        <h6>The view from the top of the Radio Tower Trail, featuring Zeus a local long distance runner</h6>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/250_resized_zeus_atop_radio_tower.jpg" alt="view of a lake">
+        <h6>The view from the top of the Radio Tower Trail, featuring Zeus a local long distance runner</h6>
         <br>
         <br>
         <br>
@@ -158,7 +203,7 @@
 
     <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
     </h3>
-    <button type="button" href=""><i class="far fa-address-book"></i> Contact</button>
+    <a type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
 
 
   </section>
