--- a/produce.html
+++ b/produce.html
@@ -31,7 +31,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="bootstrap_project_12_2020/index.html"> <i class="fas fa-home"></i> Home</a>
         </li>
@@ -49,6 +49,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="map.html"> <i class="fas fa-map-signs"></i>Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="local_history_fauna_.html"><i class="fas fa-scroll"></i>  Local History & Fauna </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html"><i class="far fa-address-book"></i>  Contact</a>
@@ -139,7 +142,7 @@
 
     <h3>Do you have something you would like added to The Baltyboys Forum? Then Contact Us Today!
     </h3>
-    <button type="button" href=""><i class="far fa-address-book"></i> Contact</button>
+    <a type="button" href="contact.html" class="btn btn-info btn-lg main-button"><i class="far fa-address-book"></i> Contact</a>
 
 
   </section>
